clusters/microk8s/apps/zigbee/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zigbee
  labels:
    name: zigbee
    app.kubernetes.io/name: zigbee
