clusters/microk8s/apps/zigbee/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt-frontend
  namespace: zigbee
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: zigbee2mqtt-frontend
  namespace: zigbee
  labels:
    kubernetes.io/service-name: zigbee2mqtt-frontend
addressType: IPv4
ports:
- name: http
  port: 8080
  protocol: TCP
endpoints:
- addresses:
  - "192.168.2.59"
  conditions:
    ready: true
    serving: true
    terminating: false
